<resources>

    <string name="app_name">Festivapp</string>

    <!-- Strings relacionados con LoginActivity y RegistroActivity -->
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_nombre_completo">Nombre completo</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email_registro">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_repetir">Vuelva a introducir la contraseña</string>
    <string name="action_log_in">Log in</string>
    <string name="action_register">Registrar</string>
    <string name="mensajeNoRegistrado">¿No estás registrado? ¡Regístrate ahora!</string>
    <string name="welcome">"Bienvenido de nuevo!"</string>
    <string name="invalid_username">Usuario inválido</string>
    <string name="invalid_password">La contraseña debe tener >5 caracteres</string>
    <string name="invalid_password_registro">Las contraseñas no coinciden</string>
    <string name="invalid_email">Email inválido</string>
    <string name="invalid_sex_registro">Es obligatorio seleccionar un sexo</string>
    <string name="invalid_nombre_completo">Nombre completo inválido</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="checkbox">CheckBox</string>

    <!-- Strings relacionados con GenerosActivity -->
    <string name="generos_texto_sup">¿Qúe géneros te gusta escuchar?"</string>
    <string name="generos_texto_boton_deplazamiento">Botón desplazamiento derecho</string>

    <!-- Strings relacionados con ArtistasActivity -->
    <string name="artistas_texto_barra_busqueda">¿A qúe artistas quieres seguir?"</string>
    <string name="artistas_texto_boton_deplazamiento">Botón desplazamiento derecho</string>
    <string name="texto_artistas_seguidos">Artistas seguidos</string>
    <string name="texto_resultado_busqueda">Resultados búsqueda</string>
    <string name="title_activity_descubrir">DescubrirActivity</string>

    <!-- Strings relacionados con MainActivity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1_main">Mis festivales</string>
    <string name="tab_text_2_main">Descubrir</string>
    <string name="tab_text_3_main">Mapa</string>
    <string name="imagen_festival_descripcion">Imagen del logo del festival</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
